# ByteSnip

./: .gitignore  ByteSnip.spec  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
assets/icons/: ByteSnip.icns
scripts/: make_icns.py  reset_db.py
src/snipapp/: __init__.py  main.py
src/snipapp/app/: __init__.py
src/snipapp/core/: __init__.py  app_registration.py  capture.py  clipboard.py  db.py  highlight.py  hotkeys.py  models.py  run_at_login.py  search.py  settings.py
src/snipapp/ui/: __init__.py  picker_window.py  save_window.py  settings_window.py
src/snipapp/ui/components/: __init__.py  code_preview.py  folder_tree.py  snippet_detail.py  tag_input.py
tests/: conftest.py  test_app_registration.py  test_db.py  test_highlight.py  test_models.py  test_run_at_login.py  test_search.py  test_settings.py  test_ui_components.py
